Respect disableHugoGeneratorInject setting

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -104,8 +104,10 @@
 <meta name="theme-color" content="{{ .Site.Params.assets.theme_color | default "#2e2e33" }}">
 <meta name="msapplication-TileColor" content="{{ .Site.Params.assets.msapplication_TileColor | default "#2e2e33" }}">
 
+{{- if not .Site.Params.disableHugoGeneratorInject }}
 {{- /* Generator */}}
 {{ hugo.Generator }}
+{{- end }}
 
 {{- /* RSS */}}
 {{ range .AlternativeOutputFormats -}}
